hphp/test/zend/bad/ext/standard/tests/general_functions/call_user_method_002.php
<?php

call_user_method("1", $arr1);

?>